--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Tragedy-of-Coriolanus_1535
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Shakespeare, William
@@ -16,6 +19,8 @@ description: The plays in the New Kittredge Shakespeare series retain their orig
   seems necessary. These new editions also include introductory essays by contemporary
   editors, notes on the plays as they have been performed on stage and film, and additional
   student materials.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1535#The-Tragedy-of-Coriolanus
 gutenberg_issued: '1998-11-01'
 gutenberg_type: Text
 identifiers:
